Fix email and text alignment

--- a/source/sass/components/_custom.scss
+++ b/source/sass/components/_custom.scss
@@ -20,3 +20,8 @@ img {
 .material-icons {
   color: white;
 }
+
+.text-justify {
+  text-align: justify;
+  text-justify: inter-word;
+}
